# Undergraduate-Astronomy-Work

Jupyter/Astro 323/: Astr3232223.ipynb
Jupyter/Astro 323/.ipynb_checkpoints/: Astr3232223-checkpoint.ipynb  Astr3232232023-checkpoint.ipynb
Jupyter/Astro 421/: MESAHomework.ipynb  plot_ssm.jl  sun-atmosphere-kamp.csv  sunBP2000 - sunBP2000.csv
Jupyter/Astro 421/.ipynb_checkpoints/: HW2-checkpoint.ipynb  HW3-checkpoint.ipynb  MESAHomework-checkpoint.ipynb  Stellar Structures-checkpoint.ipynb  nai_d_data-checkpoint.csv  plot_ssm-checkpoint.jl  vega-atmosphere-kampV2-checkpoint.csv
Jupyter/Astro 421/1MSunData/: history.data  profile.147.data  profile.290.data  profile.4903.data  profile.5632.data  profile.95.data
Jupyter/Astro 421/25MsunData/: history.data  profile.1116.data  profile.352.data  (+3 more)
Jupyter/Astro 481/: Lab 1.ipynb
Jupyter/Astro300/: Astr425 Final (MCMC).ipynb  FITSTAbles (1).ipynb  Gaia_CMD.ipynb  HW_FittingData (1).ipynb  HW_Observing.ipynb  HW_ReadingData.ipynb  SNData - Sheet1.csv  SNData - Sheet2.csv  Untitled.ipynb  acisf02564N004_pha2.fits  dss.05.35.01.5-05.26.24.0.fits  dss.10.45.03.5-59.41.04.1.fits
Jupyter/Astro480/: Lab1.ipynb  data_reduction.ipynb  gain.ipynb  linearity.ipynb  tinkerTOY.ipynb
Jupyter/Research/He6CRESDAQ/He6DAQ-develop/UDP_receiver/: CMakeLists.txt  Makefile  cmake_install.cmake  udprx.cpp  udprx_barebones_nothreads.cpp  udprx_barebones_nothreads_2.cpp  udprx_barebones_with_threads.cpp  udprx_original.cpp  udprx_simple_05032022.cpp
Jupyter/Research/He6CRESDAQ/He6DAQ-develop/UDP_receiver/common/: Socket.h
(+146 files in other folders)
